[package]
name = "adobededrmtools-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
adobededrmtools = { workspace = true }
adobededrmtools-crypto = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

reqwest = "0.12.22"
tokio = { version = "1.46.1", features = ["full"] }

env_logger = "0.11.8"
getrandom = "0.3.3"
clap = { version = "4.5.41", features = ["derive"] }
serde_json = "1.0.141"

[[bin]]
name = "adobededrmtools"
path = "src/main.rs"