[package]
name = "adobededrmtools-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }

base64 = "0.22.1"
sha1 = "0.10.6"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc", "std"] }
rsa = { version = "0.9.8", default-features = false, features = ["std"] }
x509-cert = "0.2.5"
p12-keystore = "0.2.0"
rand_chacha = "0.9.0"
