[package]
name = "adobededrmtools"
version = "0.1.0"
edition = "2024"

[dependencies]
adobededrmtools-crypto = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11.17"

quick-xml = { version = "0.38.0", features = ["serialize"] }
xmltree = "0.11.0"

zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
flate2 = { version = "1.1.2", default-features = false }
chrono = "0.4.41"

[dev-dependencies]
sha1 = "0.10.6"
hex = "0.4.3"
